Revert "Updated the narayana.sh to run the basic integration tests from the app server"
This reverts commit 94e00229a63895c4be805480d4815f816fa9da7c.